# vulkan_tutorial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/stb/: CMakeLists.txt
vulkan_tutorial/: CMakeLists.txt
vulkan_tutorial/shaders/: fragment_shader.frag
vulkan_tutorial/src/: application.cpp  application.h  application.hpp  debug_messenger.h  definitions.h  definitions.hpp  device_surface_info.cpp  device_surface_info.h  device_surface_info.hpp  error_handling.cpp  error_handling.h  error_handling.hpp  image_loader.cpp  image_loader.h  image_loader.hpp  include_glm.hpp  integer.h  integer.hpp  main.cpp  physical_device_info.cpp  physical_device_info.h  physical_device_info.hpp  read_file.cpp  read_file.h  unused_var.h  vulkan_object_type_traits.hpp  vulkan_utility.cpp  vulkan_utility.h  vulkan_utility.hpp
vulkan_tutorial/src/debug/: vulkan_debug.cpp  vulkan_debug.hpp
vulkan_tutorial/src/debug/annotate/: vk_annotate.h  vk_annotate.hpp
vulkan_tutorial/src/device/: physical_device_info.cpp  physical_device_info.h  vulkan_device.cpp  vulkan_device.h
vulkan_tutorial/src/pipeline/: uniform_buffer_object.hpp  vertex.h  vertex.hpp
vulkan_tutorial/src/pipeline/descriptors/: struct_descriptor.h  vertex_descriptor.h  vertex_descriptor.hpp
